Авторизация на стороне API, переделка методов котнроллеров
